# pihnn

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: actions.yml
docs/: about_us.rst  bc.rst  conf.py  geometries.rst  get_started.rst  graphics.rst  index.rst  nn.rst  publications.rst  utils.rst
docs/_templates/autoapi/: index.rst
examples/FEM_solutions/: plate_hole.rpt  rail_section.rpt  shear_stress_square.rpt  slant_crack.rpt  square_with_mass.rpt
examples/cracks/: slant_crack_rice.py  slant_crack_williams.py  straight_crack_rice.py  straight_crack_williams.py
examples/multiply_connected/: laplace_dd.py  plate_hole_dd.py
examples/simply_connected/: laplace.py  quarter_plate_hole.py  quarter_ring.py  rail_section.py  shear_stress_square.py
pihnn/: bc.py  geometries.py  graphics.py  nn.py  utils.py
