[tool.setuptools]
packages = ["pihnn"]

[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pihnn"
authors = [{name = "Matteo Calafa'", email = "matcal@dtu.dk"}]
description = "Physics-informed holomorphic neural networks"
version = "1.1"
readme = "README.md"
license = {text = "LGPL-2.1"}
requires-python = ">=3.10"